# sphinxcontrib-revealjs

./: .gitignore  .gitmodules  README.md  pyproject.toml
docs/: conf.py
example/: conf.py  index.rst  requirements.txt
sphinxcontrib/revealjs/: __init__.py  addnodes.py  builder.py  builders.py  soupbridge.py  transforms.py
sphinxcontrib/revealjs/directives/: __init__.py  slides.py
sphinxcontrib/revealjs/theme/: page.html  theme.conf
sphinxcontrib/revealjs/theme/revealjs_themes/: beige.css  black.css  blood.css  league.css  moon.css  night.css  serif.css  simple.css  sky.css  solarized.css  white.css
sphinxcontrib/revealjs/theme/static/: plugin  reveal.css  reveal.js
src/: __init__.py  newslide.py  revealjs.py  transforms.py
src/directives/: slides.py
src/theme/revealjs_themes/: black.css  blood.css  night.css  simple.css  white.css
src/theme/static/: reveal.css  reveal.js
tests/: conftest.py  test_build_revealjs.py  test_interslide.py  test_slides.py
tests/roots/test-builder-revealjs/: index.rst
tests/roots/test-interslide/: index.rst
tests/roots/test-revealjs-conf/: conf.py  index.rst
tests/roots/test-slides/: conf.py  index.rst
