[tool.poetry]
name = "sphinxcontrib-revealjs"
version = "0.1-alpha.1"
description = "Build slides with RevealJS."
authors = ["Ashley Trinh <ashley@hackbrightacademy.com>"]
license = "MPL-2.0"
readme = "README.md"
packages = [
  { include = "sphinxcontrib" }
]

[tool.poetry.dependencies]
python = "^3.8"
Sphinx = "^4.1.1"
cssutils = "^2.3.0"
beautifulsoup4 = "^4.10.0"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
sphinx-autobuild = "^2021.3.14"
pytest = "^6.2.4"
mypy = "^0.910"
ipython = "^7.27.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
